K  3815	ArrayIndexOutOfBoundsException for some IMAP protocol errors
K  4002	MultipartReport.setReport and setDeliveryStatus are broken
K  4065	Wrong representation of CR/LF are appended to the attachment
K  4296	SSL Re-Negotiation Problem with checkserveridentity=true
K  4511	Thread safety in javax.mail.PasswordAuthentication
K  4583	Add SOCKS5 support
<no id>	properly handle timeouts during SSL negotiation
<no id>	free MIME headers in IMAPMessage.invalidateHeaders
<no id>	fix exception in POP3Message when reading file cached content twice
<no id>	suppress auth info in debug output, unless mail.debug.auth=true
<no id>	better handle timeouts from POP3 server, throwing FolderClosedException
<no id>	add com.sun.mail.util.ReadableMime to allow reading raw MIME data
<no id>	work around Gmail IMAP bug with nested messages
<no id>	close the SMTP connection if there's an I/O error


		  CHANGES IN THE 1.4.4 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.4 release.

5057742	javax.mail.internet.MimeMessage.addFrom() violates RFC2822
6778568	lower memory usage of POP3 parsing by buffering to disk
6905730	MimeMessage.parse() is very slow on malformed message content
6910675	IMAP provider can lose track of message sequence numbers
6928566	Header violates RFC 2822 for multiple calls of addRecipient(s)
6995537	work around this JDK bug that causes iso-2022-jp decoding problems
G 11069	update the mail.jar manifest to include DynamicImport-Package
K  3442	make sure socket is closed if SMTP connect fails
K  3539	Multiparts do not parse correctly in presence of legacy Mac line endings
K  3566	InputStreams are not closed in MimeMultipart
<no id>	add mail.mime.windowsfilenames System property to handle IE6 breakage
<no id>	properly disable TOP if POP3 CAPA response doesn't include it
<no id>	add mail.pop3.disablecapa property to disable use of the CAPA command
<no id>	fix support for Properties objects with default Properties objects